<resources>

    <string name="app_name">QRPasswds</string>
    <string name="action_settings">Settings</string>
    <string name="credential_type">Type</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_button">Add</string>
    <string name="create_button">Create QR</string>
    <string name="key_file_missing_title">Key file missing</string>
    <string name="key_file_missing_message">Generate a new key file or import an existing one</string>
    <string name="error_reading_file">There was an error reading the file, please try again</string>
    <string name="not_valid_file">The file you selected does not contain a valid QRPasswords key file, please choose a valid file</string>
    <string name="error_creating_file">There was an error creating the key file, please try again</string>
    <string name="key_file_created">The key file has been successfully created</string>
    <string name="error_creating_qr">There was an error creating the QR image, please try again</string>
    <string name="qr_created">QR image has been successfully created</string>
    <string name="preferences_keysize_title">AES key size</string>
    <string name="preferences_keysize_summary">The size of AES key in bits</string>
    <string name="settings">Settings</string>
    <string name="preferences_encryption">Encryption</string>
    <string name="preferences_encoding">Encoding</string>
    <string name="preferences_qr_dimensions_title">QR dimensions</string>
    <string name="preferences_qr_dimensions_summary">The size of the QR image side dimension in pixels</string>
    <string name="export_key_title">Export key</string>
    <string name="import_key_title">Import key</string>
    <string name="export_key_message">The exported key file will be public, move it in a safe place</string>
    <string name="export">Export</string>
    <string name="cancel">Cancel</string>
    <string name="key_exported">Key file has been successfully exported</string>
    <string name="key_imported">Key file has been successfully imported</string>
    <string name="error_exporting_key">There was an error exporting the key file, please try again</string>
    <string name="scan">Scan</string>
    <string name="open_settings">Settings</string>
    <string name="import_key_summary">Import a key file from SD card</string>
    <string name="export_key_summary">Export the key file to SD card</string>
    <string name="generate_key_title">Generate Key</string>
    <string name="generate_key_summary">Generate and store a random key</string>
    <string name="generate">Generate</string>
    <string name="import_dialog">Import</string>
    <string name="no_credential_error">Please add at least one credential</string>
    <string name="clear">Clear</string>
    <string name="clear_message">All inserted credentials will be lost</string>
    <string name="clear_dialog_title">Clear screen?</string>
    <string name="file_manager_not_found">Please install a file browser to import key</string>
    <string name="error_scanning">There was an error scanning the QR, please try again</string>
    <string name="close">Close</string>
    <string name="error">Error</string>


</resources>