<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
   	<PreferenceCategory android:title="@string/preferences_encryption" />
   	
    <ListPreference
        android:key="aes_keySize"
        android:title="@string/preferences_keysize_title"
        android:summary="@string/preferences_keysize_summary"
        android:entries="@array/keysize_list_human"
        android:entryValues="@array/keysize_list"
        android:defaultValue="128" />    
    
    <PreferenceCategory android:title="@string/preferences_encoding" />
    
    <EditTextPreference
        android:key="qr_dimensions"
        android:title="@string/preferences_qr_dimensions_title"
        android:summary="@string/preferences_qr_dimensions_summary"
        android:defaultValue="600"
        android:inputType="number" />   
    
</PreferenceScreen>
