<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/scan"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/scan"
        android:icon="@drawable/ic_device_access_camera" />
    
    <item android:id="@+id/delete"
        android:orderInCategory="96"
        android:showAsAction="ifRoom"
        android:title="@string/clear"
        android:icon="@drawable/ic_content_discard"/>  
        
    <item android:id="@+id/scan_file"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/scan_file" />
        
    <item android:id='@+id/import_key'
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/import_key_title" />
    
    <item android:id='@+id/export_key'
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/export_key_title" />
    
    
</menu>