<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/credential_wrapper" >
    
    <EditText
        android:id="@+id/credential_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/credential_type"
        android:imeOptions="actionNext"
        android:saveEnabled="false" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_pass_wrapper" >

        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/username"
            android:imeOptions="actionNext" 
            android:saveEnabled="false"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/password" 
            android:imeOptions="actionDone"
            android:saveEnabled="false"/>

    </LinearLayout>

</LinearLayout>